feed: accidentaly made larger gap between sentences, fixed

--- a/components/feed/stylesheets/feed.styl
+++ b/components/feed/stylesheets/feed.styl
@@ -1,9 +1,9 @@
 @import '../../layout/variables'
 
 .feed-group
-  margin 60px 0 0 0
+  margin 50px 0 0 0
   border-top 1px dotted #eee
-  padding 12px 0 40px 0
+  padding 12px 0 0 0
 
 .feed-group__sentence
   max-width 900px
@@ -36,7 +36,7 @@
   float left
   width 100%
   border-top 1px dotted #eee
-  margin 15px 0 50px 0
+  margin 5px 0 50px 0
   padding 0 0 0 10px
 
   .explore__channel__path
